XMLtoCSV/objects/unpackaged/objects/Product_Metrics_vod__c.object
<CustomObject>
    <description>This object stores all metrics available for all accounts. Each metric is specific to a product, so the logical key is (account, product).</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the master object for product metrics.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <description>Sample metric field.</description>
        <label>Awareness</label>
        <picklist>
            <picklistValues>
                <fullName>Unaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics (Detail Group)</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagements__c</fullName>
        <description>Sample metric field.</description>
        <label>Engagements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formulary_Status__c</fullName>
        <description>Sample metric field.</description>
        <label>Formulary Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Formulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Prior Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigator_Readiness__c</fullName>
        <description>Sample metric field.</description>
        <label>Investigator Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Child_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Child Account of the Child Account record</description>
        <label>Location Child</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Child)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Child_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Parent_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Parent Account of the Child Account record</description>
        <label>Location Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Parent)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Parent_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship where the product metrics are set</description>
        <label>Location</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Movement__c</fullName>
        <description>Sample metric field.</description>
        <label>Movement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_Priority__c</fullName>
        <label>CLL Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Suggested Target or Target Segment last updated by.</description>
        <inlineHelpText>Suggested Target Information Last Updated by</inlineHelpText>
        <label>Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Last_Updated_Date__c</fullName>
        <description>Last Updated Date</description>
        <inlineHelpText>Suggestion Target Info last updated date</inlineHelpText>
        <label>Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_Priority__c</fullName>
        <description>NHL Priority</description>
        <label>NHL Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Suggested_Target_Segment__c</fullName>
        <description>PCYC Suggested Target Segment</description>
        <label>Suggested Target Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Suggested_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suggested Target</description>
        <label>Suggested Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Target_Segment__c</fullName>
        <description>PCYC_Target Segment</description>
        <label>Target Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCYC Target</description>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The products field is required and shows which product relates to the metric row.</description>
        <label>Products</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Products_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Sample metric field.</description>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Stage__c</fullName>
        <description>Sample metric field.</description>
        <label>Selling Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Through</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Skills__c</fullName>
        <description>Sample metric field.</description>
        <label>Speaker Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X12_mo_trx_chg__c</fullName>
        <description>Sample metric field.</description>
        <label>12 mo TRx Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Metrics</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Product Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>